2004-02-29  Rodney Dawes  <dobey@ximian.com>

	* gnome-wp-capplet.c (gnome_wp_add_image): Split out real image adding
	code into a separate call
	(gnome_wp_add_images):
	(gnome_wp_file_open_dialog):
	(gnome_wp_properties_init): Add support for GtkFileChooser (#135317)
	(bg_properties_dragged_image): Fix re-addition of deleted images
	* gnome-wp-capplet.h: Store the filesel widget in GnomeWPCapplet
	* gnome-wp-item.c: Fix warning about gnome_vfs_mime_get_description

	Fixes #135317

2004-02-24  Rodney Dawes  <dobey@ximian.com>

	* gnome-wp-info.c (gnome_wp_info_new):
	* gnome-wp-item.c (gnome_wp_item_get_thumbnail): Escape the path for
	thumbnails and fileinfo (#135089)

	Fixes #135089

2004-02-24  Rodney Dawes  <dobey@ximian.com>

	* gnome-wp-xml.c (gnome_wp_oad_legacy): Check that the file exists,
	and continue through the loop if it doesn't (#135251)

	Fixes #135251

2004-02-24  Rodney Dawes  <dobey@ximian.com>

	* gnome-wp-item.c (gnome_wp_item_get_thumbnail): Add some explanatory
	comments to bits of the code
	Fix the ratio calculation to handle images of all sizes (#134541)
	Don't force tiling of square images
	Don't do _save_thumbnail () for the custom thumbnails
	If pixbuf is NULL, copy away bgpixbuf and return that instead
	* gnome-wp-utils.c (gnome_wp_tile_pixbuf):
	(gnome_wp_center_pixbuf): Return copied pixbufs

	Fixes #134541

2004-02-17  Rodney Dawes  <dobey@ximian.com>

	* gnome-background-properties.glade: Use untranslated strings for
	the color picker dialog titles (glade bug set them to the translated
	versions of the strings)

	Fixes #134171

2003-12-07  Jan Arne Petersen  <jpetersen@uni-bonn.de>

	* background-properties-capplet.c: remove unused
	"preview_file_selection.h" include.

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-02-12  Mark McLoughlin  <mark@skynet.ie>

	* background-properties-capplet.c: (cb_dialog_response):
	* gnome-wp-capplet.c: (wallpaper_properties_clicked): Update help
	links to point to user-guide.xml
