@@ -1,3 +1,10 @@
+2004-03-04  Rodney Dawes  <dobey@ximian.com>
+
+	* gnome-wp-capplet.c (gnome_wp_add_image): Select the added image, and
+	change the scaling type to "wallpaper" if it is "none" (#136228)
+
+	Fixes #136228
+
 2004-02-29  Rodney Dawes  <dobey@ximian.com>
 
 	* gnome-wp-capplet.c (gnome_wp_add_image): Split out real image adding
